--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile.base
     image: mordorwide/dedicated-base:latest
+    pull_policy: never
     container_name: ConquestGameServer-11900
     volumes:
       - ./Dedicated.xml:/home/steamuser/Dedicated.xml:ro
@@ -13,8 +14,15 @@ services:
       # defined in the Dedicated.xml config file.
       - "11900:11900/udp"
     environment:
-      # Shuffles the levels before lanuching the server.
+      # Shuffles the levels before lanuching the server (0/1).
       - SHUFFLE_LEVELS=1
+      ## These following variables are only needed if a custom internal IP should be set at the master server.
+      ## > Allow unverified HTTPS connections (0/1)
+      #- MORDORWIDE_UNVERIFIED=0
+      ## > HTTP base URL to the master server (defaults to https://mordorwi.de)
+      #- MORDORWIDE_HOST=https://mordorwi.de
+      ## > The custom, internal IP of the server
+      #- MORDORWIDE_INTERNAL_IP=192.168.1.200
     restart: unless-stopped
 
   conquest-gameserver-dlc:
@@ -22,6 +30,7 @@ services:
       context: .
       dockerfile: Dockerfile.dlc
     image: mordorwide/dedicated-dlc:latest
+    pull_policy: never
     container_name: ConquestGameServer-11901
     volumes:
       - ./Dedicated_DLC.xml:/home/steamuser/Dedicated.xml:ro
@@ -30,6 +39,14 @@ services:
       # defined in the Dedicated.xml config file.
       - "11901:11901/udp"
     environment:
-      # Shuffles the levels before lanuching the server.
+      # Shuffles the levels before lanuching the server (0/1).
       - SHUFFLE_LEVELS=0
+      ## These following variables are only needed if a custom internal IP should be set at the master server.
+      ## > Allow unverified HTTPS connections (0/1)
+      #- MORDORWIDE_UNVERIFIED=0
+      ## > HTTP base URL to the master server (defaults to https://mordorwi.de)
+      #- MORDORWIDE_HOST=https://mordorwi.de
+      ## > The custom, internal IP of the server
+      #- MORDORWIDE_INTERNAL_IP=192.168.1.200
+
     restart: unless-stopped
